[gd_scene load_steps=5 format=3 uid="uid://bjtlok2bi817j"]

[ext_resource type="Script" path="res://addons/Components/ui/component_database/component_block/ComponentBlock.gd" id="1_a3dq2"]
[ext_resource type="PackedScene" uid="uid://uk58l8ognu64" path="res://addons/Components/ui/component_database/layout_config/LayoutConfig.tscn" id="1_bv7uk"]
[ext_resource type="PackedScene" uid="uid://cagrkjh3g4yfo" path="res://addons/Components/ui/component_database/attrib_block_list/AttribBlockList.tscn" id="2_q0pm5"]
[ext_resource type="Texture2D" uid="uid://cgh5n7pdt7j8s" path="res://addons/Components/assets/icons/arrow_down.svg" id="3_enmfe"]

[node name="ComponentBlock" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 8
columns = 2
script = ExtResource("1_a3dq2")

[node name="UUID" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UUID"]
layout_mode = 2
text = "UUID: "

[node name="UUID_LineEdit" type="LineEdit" parent="UUID"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Name" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Name"]
layout_mode = 2
text = "Name: "

[node name="Name_LineEdit" type="LineEdit" parent="Name"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="Type" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Type"]
layout_mode = 2
text = "Type: "

[node name="Type_LineEdit" type="LineEdit" parent="Type"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="BasicStats" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="BasicStats"]
layout_mode = 2
text = "Basic Stats:"

[node name="Data" type="GridContainer" parent="BasicStats"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="SP_Label" type="Label" parent="BasicStats/Data"]
layout_mode = 2
text = "Struct. Pts.:"

[node name="SP_LineEdit" type="LineEdit" parent="BasicStats/Data"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="Absorp_Label" type="Label" parent="BasicStats/Data"]
layout_mode = 2
text = "Absorption: "

[node name="Absorp_LineEdit" type="LineEdit" parent="BasicStats/Data"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="Bleed_Label" type="Label" parent="BasicStats/Data"]
layout_mode = 2
text = "Bleed: "

[node name="Bleed_LineEdit" type="LineEdit" parent="BasicStats/Data"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="Stress_Label" type="Label" parent="BasicStats/Data"]
layout_mode = 2
text = "Stress: "

[node name="Stress_LineEdit" type="LineEdit" parent="BasicStats/Data"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="AttribBlockList" parent="BasicStats" instance=ExtResource("2_q0pm5")]
layout_mode = 2
size_flags_vertical = 3

[node name="LimitsLayouts" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="LimitsLayouts"]
layout_mode = 2
text = "Structure Limits / Layout:"

[node name="SizeRange" type="GridContainer" parent="LimitsLayouts"]
layout_mode = 2
theme_override_constants/h_separation = 24
columns = 3

[node name="MinValue" type="HBoxContainer" parent="LimitsLayouts/SizeRange"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="LimitsLayouts/SizeRange/MinValue"]
layout_mode = 2
text = "Min:"

[node name="MinSize_LineEdit" type="LineEdit" parent="LimitsLayouts/SizeRange/MinValue"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="MaxValue" type="HBoxContainer" parent="LimitsLayouts/SizeRange"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="LimitsLayouts/SizeRange/MaxValue"]
layout_mode = 2
text = "Max:"

[node name="MaxSize_LineEdit" type="LineEdit" parent="LimitsLayouts/SizeRange/MaxValue"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="RangeIndicator" type="Label" parent="LimitsLayouts/SizeRange"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "[ VALID ]"
horizontal_alignment = 1

[node name="LayoutType" type="HBoxContainer" parent="LimitsLayouts"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="LimitsLayouts/LayoutType"]
layout_mode = 2
text = "Layout: "

[node name="LayoutType_Dropdown" type="MenuButton" parent="LimitsLayouts/LayoutType"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Hoopdidoo Review	"
icon = ExtResource("3_enmfe")
flat = false
alignment = 0
icon_alignment = 2
item_count = 3
popup/item_0/text = "Static"
popup/item_0/id = 0
popup/item_1/text = "Cluster"
popup/item_1/id = 1
popup/item_2/text = "Growable"
popup/item_2/id = 2

[node name="LayoutConfig" parent="LimitsLayouts" instance=ExtResource("1_bv7uk")]
custom_minimum_size = Vector2(0, 384)
layout_mode = 2
max_value = 10
min_value = 5
